почти готовые 2 страницы
не успел разобраться с футером и еще парочка мелочей

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
   	font-size: 15px;
   	line-height: 30px;
   	color: #000000;
+
 }
 
 a {
@@ -464,17 +465,56 @@ h6 {
 
 
 /*              CATALOG                  CATALOG               CATALOG               CATALOG               CATALOG             */
-
-
+/*
+.helper {
+	position: absolute;
+	width: 1200px;
+	height: 300px;
+	background: green;
+	top: -365px;
+	z-index: -8;
+}  */
+.catalog-navigation {
+	margin-bottom: 40px;
+}
 
 .catalog-navigation h2 {
 	font-size: 47px;
+}
+
+.h2-hidden {
+	position: absolute;
+	top: -110px;
+	left: 80px;
+}
+
+.navigation-links {
+	display: flex;
+	padding-left: 60px;
+	margin-top: -62px;
+}
+
+.navigation-links li div {
+	width: 10px;
+	height: 10px;
+	background-image: url('../img/svg/nav-arrow.svg');
+	background-repeat: no-repeat;
+	position: absolute;
+	top: 15px;
+}
+
+.navigation-links li {
+	padding: 0 7px;
+	position: relative;
+	left: -6px;
 }
 
 .navigation-links a {
 	font-size: 14px;
 	line-height: 36px;
 	color: rgba(0,0,0,.3);
+	padding-left: 0;
+	margin-left: 0;
 }
 
 .navigation-links a:hover {
@@ -484,6 +524,66 @@ h6 {
 .navigation-links a:active {
 	color: rgba(0,0,0,.3);
 }
+
+.catalog-title-background {
+	height: 70px;
+	background-image: linear-gradient(to right, #dbdbdb 50%, #ebebeb 50%);
+	margin: 0;
+	padding: 0;
+	z-index: -10;
+}
+
+.container-wrap {
+	position: relative;
+	box-sizing: border-box;
+	width: 1200px;
+	height: 100%;
+	margin: 0 auto;
+	padding: 0;
+	background-image: linear-gradient(to right, #dbdbdb 50%, #ebebeb 50%);
+
+}
+
+.catalog-title-background div div {
+	background: #ebebeb;
+	width: 252px;
+	height: 100%;
+	margin: 0 auto;
+	position: relative;
+	left: -123px;
+	z-index: 1;
+}
+
+.catalog-title-background2 {
+	height: 1217px;
+	background-image: linear-gradient(to right, #efefef 50%, #ffffff 50%);
+	margin: 0;
+	padding: 0;
+	z-index: -10;
+}
+
+.container-wrap2 {
+	position: relative;
+	box-sizing: border-box;
+	width: 1200px;
+	height: 100%;
+	margin: 0 auto;
+	padding: 0;
+	background-image: linear-gradient(to right, #efefef 50%, #ffffff 50%);
+
+}
+
+.catalog-title-background2 div div {
+	background: #ffffff;
+	width: 252px;
+	height: 100%;
+	margin: 0 auto;
+	position: relative;
+	left: -123px;
+	z-index: 1;
+}
+
+
 
 .catalog-header h3 {
 	font-size: 16px;
@@ -510,6 +610,9 @@ h6 {
 }
 
 .catalog-filter fieldset {
+	padding: 0;
+	width: 220px;
+	box-sizing: border-box;
 	border: none;
 }
 
@@ -552,24 +655,35 @@ h6 {
 	font-family: gilroyextrabold, Arial, sans-serif;
 	font-size: 18px;
 	width: 260px;
+	line-height: 22px;
+	padding: 0;
+	margin: 0;
 }
 
 .product p {
 	font-family: gilroylight, Arial, sans-serif;
 	font-size: 16px;
 	color: #464646;
-	line-height: 0px;
+	line-height: 22px;
+	padding: 0;
+	margin: 0;
 }
 
 .product {
 	width: 360px;
+	position: relative;
 }
 
-.product div {
+.product img {
+
+}
+
+.product .products-list-description {
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
 	padding: 10px 0;
+	margin-top: 16px;
 } 
 
 .products-list-navigation {
@@ -577,22 +691,27 @@ h6 {
 	height: 70px;
 	justify-content: space-between;
 	align-items: center;
+	margin-top: -10px;
 }
 
-.list-pages label {
+.list-pages label a {
 	font-family: gilroyextrabold, Arial, sans-serif;
 	font-size: 16px;
 	color: rgba(0,0,0,.3);
-	margin: 10px 10px;
+	margin: 10px 13px;
 }
 
-.list-pages label:hover {
+.list-pages label:hover a {
 	color: rgba(0,0,0,.6);
 }
 
-#button-1:checked + label,
-#button-2:checked + label,
-#button-3:checked + label {
+.list-pages label:active a {
+	color: black;
+}
+
+#button-1:checked + label a,
+#button-2:checked + label a,
+#button-3:checked + label a {
 	color: #000000;
 } 
 
@@ -617,6 +736,14 @@ h6 {
 	margin: 0 auto;
 	padding: 0 20px;
 	margin-top: 35px;
+}
+
+.catalog-header .container {
+	margin-top: 0px;
+}
+
+.catalog-background .container {
+	margin-top: 0px;
 }
 
 .left-part {
@@ -673,6 +800,14 @@ h6 {
 	position: absolute;
 	width: 1160px;
 	height: 300px;
+	background: #f7e296;
+	z-index: -10;
+}
+
+.catalog-header-background {
+	position: absolute;
+	width: 1160px;
+	height: 186px;
 	background: #f7e296;
 	z-index: -10;
 }
@@ -1075,6 +1210,11 @@ MAIN GRID
 	top: -5px;
 }
 
+
+
+/* CATALOG  */
+
+
 .main-footer .footer-social {
 	position: relative;
 	left: -25px;
@@ -1083,10 +1223,307 @@ MAIN GRID
 	padding: 0 11px;
 }
 
-/*.helper {
-	width: 100%;
-	height: 72px;
-	background: green;
-	position: absolute;
+.catalog-filter input[type="checkbox"],
+.catalog-filter input[type="radio"] {
+    display:none;
 }
 
+
+.title-background-bottom {
+	
+}
+.catalog-filter input[type="checkbox"] + label span {
+    display:inline-block;
+    width: 30px;
+    height: 30px;
+    margin: 0px 10px 0 0;
+    vertical-align: middle;
+    background: url('../img/svg/checkbox-off.svg') left top no-repeat;
+    cursor: pointer;
+}
+
+.catalog-filter input[type="checkbox"]:checked + label span {
+    background: url('../img/svg/checkbox-on.svg') left top no-repeat;
+}
+
+.catalog-filter input[type="checkbox"]:checked:active + label span {
+    background: url('../img/svg/checkbox-off.svg') left top no-repeat;
+}
+
+.catalog-filter input[type="checkbox"]:not(:checked):active + label span {
+    background: url('../img/svg/checkbox-on.svg') left top no-repeat;
+}
+
+.catalog-filter input[type="radio"]:checked:active + label span {
+    background: url('../img/svg/radio-off.svg') left top no-repeat;
+}
+
+.catalog-filter input[type="radio"]:not(:checked):active + label span {
+    background: url('../img/svg/radio-on.svg') left top no-repeat;
+}
+
+.catalog-filter input[type="radio"] + label span {
+    display:inline-block;
+    width: 30px;
+    height: 30px;
+    margin: 0px 10px 0 0;
+    vertical-align: middle;
+    background: url('../img/svg/radio-off.svg') left top no-repeat;
+    cursor: pointer;
+}
+
+.catalog-filter input[type="radio"]:checked + label span {
+    background: url('../img/svg/radio-on.svg') left top no-repeat;
+}
+
+.catalog-filter fieldset:not(:first-child) {
+	display: flex;
+	flex-direction: column;
+}
+
+.catalog-filter fieldset label {
+	margin-bottom: 10px;
+}
+
+.catalog-filter label:hover {
+    opacity: 1;
+    color: black;
+}
+.catalog-filter label:hover span {
+    opacity: 0.6;
+}
+
+.catalog-filter label {
+	color: black;
+} 
+
+#slider-cost {
+	-webkit-appearance: none;
+	width: 196px;
+	height: 2px;
+    outline-color: rgba(0,0,0,.03);	
+	background: -webkit-linear-gradient(left, #91c92f 50%, #dbdbdb 50%)
+
+}
+
+#slider-cost::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	width: 25px;
+	height: 25px;
+
+	background: url('../img/svg/filter-button.svg');
+	background-repeat: no-repeat;
+}
+
+#slider-cost::-webkit-slider-thumb:active {
+	-webkit-appearance: none;
+	width: 30px;
+	height: 30px;
+
+	background: url('../img/svg/filter-button.svg');
+	background-repeat: no-repeat;
+	background-size: 80%;
+}
+
+#slider-cost + label {
+	font-family: gilroylight, Arial, sans-serif;
+	font-size: 14px;
+	opacity: 0.2;
+	position: relative;
+	left: 85px;
+}
+
+.catalog-header {
+    background-image: linear-gradient(to right, #dcdcdc 40%, #ebebeb 40%);
+}
+
+
+.catalog-left-part {
+	display: flex;
+    justify-content: flex-start;
+	float: left;
+    width: 328px;
+    height: 70px;
+    background-color: #dcdcdc;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+}
+
+.catalog-rigth-part {
+    display: flex;
+    justify-content: flex-start;
+    float: right;
+    width: 832px;
+    height: 70px;
+    background-color: #ebebeb;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+}
+
+.catalog-background {
+	background-image: linear-gradient(to right, #ebebeb 40%, #ffffff 40%);
+}
+
+.catalog-left-background {
+	float: left;
+    width: 328px;
+    min-height: 1215px;
+    background-color: #ebebeb;
+    margin: 0;
+    padding: 0;
+    padding-left: 60px;
+    padding-top: 55px;
+    box-sizing: border-box;
+}
+
+.catalog-right-background {
+	float: right;
+    width: 832px;
+    height: 1215px;
+    background-color: white;
+    padding: 0;
+    margin: 0;
+}
+
+.catalog-left-part h3 {
+	padding-left: 60px;
+	letter-spacing: 0.2em;
+}
+
+.catalog-rigth-part h3 {
+	letter-spacing: 0.2em;
+	padding: 0;
+	padding-left: 73px;
+	padding-right: 54px;
+}
+
+.catalog-rigth-part label {
+	padding: 0;
+	padding-right: 28px;
+}
+
+.button-wrapper.wrapper-220 {
+	margin-top: 20px;
+}
+
+.radio-wrapper {
+	flex-grow: 1;
+	text-align: right;
+}
+
+.radio-wrapper label {
+	padding-right: 0;
+	padding-left: 15px;
+}
+
+.catalog-left-background fieldset {
+	margin-top: 25px;
+	width: 200px;
+}
+.catalog-left-background fieldset:before {
+	content: "";
+	display: block;
+	width: 200px;
+	border-top: 2px solid black;
+	position: relative;
+	top: -60px;
+}
+
+.catalog-left-background legend {
+	position: relative;
+	left: -4px;
+	margin-bottom: 20px;
+}
+
+.catalog-background .products-list {
+	margin-top: 70px;
+	padding-left: 73px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.products-list .product {
+	margin-bottom: 37px;
+}
+
+.products-list-navigation {
+	margin-left: 73px;
+	background: #ebebeb;
+}
+
+.products-list-navigation button {
+	letter-spacing: 0.2em;
+	outline: none;
+	cursor: pointer;
+}
+
+.previous-button,
+.next-button {
+	width: 126px;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.previous-button:hover,
+.next-button:hover {
+	background: #d9d9d9;
+}
+
+.previous-button:active button,
+.next-button:active button {
+	color: rgba(0,0,0,.3);
+}
+
+.box-img {
+	position: relative;
+}
+
+.box-img .product-hover-menu {
+	display: none;
+    position: absolute;
+
+    background-color: rgba(238, 238, 238, 0.7);
+    z-index: 12;
+    width: 360px;
+    height: 360px;
+    text-align: center;
+}
+
+.box-img:hover .product-hover-menu {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.product-to-cart {
+	position: relative;
+	top: 45px;
+	margin-bottom: 55px;
+}
+
+.product-to-cart:active {
+	color: rgba(0,0,0,.3);
+}
+
+.product-hover-menu .product-compare {
+	color: rgba(0,0,0,.5);
+}
+
+.product-hover-menu .product-compare:hover {
+	color: black;
+}
+
+.product-hover-menu .product-compare:active {
+	color: rgba(0,0,0,.2);
+}
+
+.main-footer {
+	margin-top: 0;
+	border: 1px solid green;
+}
